--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1572,15 +1572,6 @@ textarea.form-control.is-invalid {
 .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
 }
-.nav-tabs .nav-link {
-  color: #4b5563;
-}
-.nav-tabs .nav-link:hover {
-  isolation: isolate;
-}
-.nav-tabs .nav-link:focus {
-  isolation: isolate;
-}
 .nav-tabs .nav-link.disabled {
   color: #9ca3af;
   background-color: transparent;
@@ -1599,11 +1590,6 @@ textarea.form-control.is-invalid {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
-.nav-pills .nav-link {
-  background: #f3f4f6;
-  color: #4b5563;
-  box-shadow: none;
-}
 .nav-pills .nav-link.active {
   background: #2563eb;
   color: #fff;
@@ -1618,30 +1604,16 @@ textarea.form-control.is-invalid {
   color: #9ca3af;
   background-color: rgba(243, 244, 246, 0.5);
 }
-.nav-pills.menu-sidebar .nav-link {
-  background-color: transparent;
-  box-shadow: none;
-  padding: 0 5px;
-  border-radius: 0;
-}
 .nav-pills.menu-sidebar .nav-link.active {
   color: #1266f1;
   font-weight: 600;
   border-left: 0.125rem solid #1266f1;
-}
-.nav-justified > .nav-link {
-  -ms-flex-basis: 0;
-  flex-basis: 0;
 }
 .tab-content > .active {
   display: block;
 }
 .navbar-expand .navbar-nav .dropdown-menu {
   position: absolute;
-}
-.navbar-expand .navbar-nav .nav-link {
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
 }
 .navbar-light .navbar-nav .nav-link.disabled {
   color: rgba(0, 0, 0, 0.3);
@@ -1672,6 +1644,9 @@ textarea.form-control.is-invalid {
 .modal {
   z-index: 1055;
 }
+.modal-dialog {
+  margin: 0.5rem;
+}
 .modal.fade .modal-dialog {
   transition: transform 0.3s ease-out;
   transform: translate(0, -50px);
@@ -1682,8 +1657,33 @@ textarea.form-control.is-invalid {
 .modal.modal-static .modal-dialog {
   transform: scale(1.02);
 }
+.modal-dialog-scrollable .modal-content {
+  max-height: 100%;
+  overflow: hidden;
+}
+.modal-dialog-scrollable .modal-body {
+  overflow-y: auto;
+}
 .modal-backdrop.show {
   opacity: 0.5;
+}
+.modal-header .btn-close {
+  padding: 0.5rem 0.5rem;
+  margin: -0.5rem -0.5rem -0.5rem auto;
+}
+.modal-body {
+  flex: 1 1 auto;
+}
+.modal-fullscreen .modal-content {
+  height: 100%;
+  border: 0;
+  border-radius: 0;
+}
+.modal-fullscreen .modal-header {
+  border-radius: 0;
+}
+.modal-fullscreen .modal-body {
+  overflow-y: auto;
 }
 .tooltip {
   position: absolute;
@@ -2355,6 +2355,141 @@ textarea.form-control.is-invalid {
     position: sticky;
     top: 0;
     z-index: 1020;
+  }
+}
+@media (max-width: 575.98px) {
+
+  .modal-fullscreen-sm-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+
+  .modal-fullscreen-sm-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-sm-down .modal-header {
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-sm-down .modal-body {
+    overflow-y: auto;
+  }
+
+  .modal-fullscreen-sm-down .modal-footer {
+    border-radius: 0;
+  }
+}
+@media (max-width: 767.98px) {
+
+  .modal-fullscreen-md-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+
+  .modal-fullscreen-md-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-md-down .modal-header {
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-md-down .modal-body {
+    overflow-y: auto;
+  }
+
+  .modal-fullscreen-md-down .modal-footer {
+    border-radius: 0;
+  }
+}
+@media (max-width: 991.98px) {
+
+  .modal-fullscreen-lg-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+
+  .modal-fullscreen-lg-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-lg-down .modal-header {
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-lg-down .modal-body {
+    overflow-y: auto;
+  }
+
+  .modal-fullscreen-lg-down .modal-footer {
+    border-radius: 0;
+  }
+}
+@media (max-width: 1199.98px) {
+
+  .modal-fullscreen-xl-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+
+  .modal-fullscreen-xl-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-xl-down .modal-header {
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-xl-down .modal-body {
+    overflow-y: auto;
+  }
+
+  .modal-fullscreen-xl-down .modal-footer {
+    border-radius: 0;
+  }
+}
+@media (max-width: 1399.98px) {
+
+  .modal-fullscreen-xxl-down {
+    width: 100vw;
+    max-width: none;
+    height: 100%;
+    margin: 0;
+  }
+
+  .modal-fullscreen-xxl-down .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-xxl-down .modal-header {
+    border-radius: 0;
+  }
+
+  .modal-fullscreen-xxl-down .modal-body {
+    overflow-y: auto;
+  }
+
+  .modal-fullscreen-xxl-down .modal-footer {
+    border-radius: 0;
   }
 }
 @-webkit-keyframes _spinner-grow {
@@ -3083,11 +3218,11 @@ textarea.form-control.is-invalid {
 .bottom-0 {
   bottom: 0px;
 }
-.top-0 {
-  top: 0px;
-}
 .-bottom-5 {
   bottom: -1.25rem;
+}
+.top-0 {
+  top: 0px;
 }
 .right-14 {
   right: 3.5rem;
@@ -3118,14 +3253,6 @@ textarea.form-control.is-invalid {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
@@ -3133,6 +3260,14 @@ textarea.form-control.is-invalid {
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
+}
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 .mx-4 {
   margin-left: 1rem;
@@ -3211,32 +3346,8 @@ textarea.form-control.is-invalid {
 .mb-4 {
   margin-bottom: 1rem;
 }
-.mr-auto {
-  margin-right: auto;
-}
-.mr-1 {
-  margin-right: 0.25rem;
-}
-.mr-5 {
-  margin-right: 1.25rem;
-}
-.ml-auto {
-  margin-left: auto;
-}
-.mt-0\.5 {
-  margin-top: 0.125rem;
-}
-.mt-0 {
-  margin-top: 0px;
-}
-.mr-4 {
-  margin-right: 1rem;
-}
 .mb-5 {
   margin-bottom: 1.25rem;
-}
-.-mt-16 {
-  margin-top: -4rem;
 }
 .mb-10 {
   margin-bottom: 2.5rem;
@@ -3244,8 +3355,38 @@ textarea.form-control.is-invalid {
 .mr-10 {
   margin-right: 2.5rem;
 }
+.mr-4 {
+  margin-right: 1rem;
+}
 .-mt-px {
   margin-top: -1px;
+}
+.-mt-16 {
+  margin-top: -4rem;
+}
+.mr-auto {
+  margin-right: auto;
+}
+.mt-0\.5 {
+  margin-top: 0.125rem;
+}
+.mt-0 {
+  margin-top: 0px;
+}
+.mr-52 {
+  margin-right: 13rem;
+}
+.mr-1 {
+  margin-right: 0.25rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.mr-5 {
+  margin-right: 1.25rem;
+}
+.ml-auto {
+  margin-left: auto;
 }
 .ml-0\.5 {
   margin-left: 0.125rem;
@@ -3267,9 +3408,6 @@ textarea.form-control.is-invalid {
 }
 .-mb-10 {
   margin-bottom: -2.5rem;
-}
-.mr-52 {
-  margin-right: 13rem;
 }
 .block {
   display: block;
@@ -3319,14 +3457,20 @@ textarea.form-control.is-invalid {
 .h-20 {
   height: 5rem;
 }
-.h-3 {
-  height: 0.75rem;
+.h-60 {
+  height: 15rem;
 }
 .h-screen {
   height: 100vh;
 }
-.h-60 {
-  height: 15rem;
+.h-24 {
+  height: 6rem;
+}
+.h-1 {
+  height: 0.25rem;
+}
+.h-full {
+  height: 100%;
 }
 .h-32 {
   height: 8rem;
@@ -3334,14 +3478,8 @@ textarea.form-control.is-invalid {
 .h-2 {
   height: 0.5rem;
 }
-.h-full {
-  height: 100%;
-}
-.h-24 {
-  height: 6rem;
-}
-.h-1 {
-  height: 0.25rem;
+.h-3 {
+  height: 0.75rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -3388,17 +3526,17 @@ textarea.form-control.is-invalid {
 .w-20 {
   width: 5rem;
 }
-.w-3 {
-  width: 0.75rem;
+.w-40 {
+  width: 10rem;
 }
 .w-1\/2 {
   width: 50%;
 }
-.w-40 {
-  width: 10rem;
-}
 .w-56 {
   width: 14rem;
+}
+.w-24 {
+  width: 6rem;
 }
 .w-px {
   width: 1px;
@@ -3409,8 +3547,8 @@ textarea.form-control.is-invalid {
 .w-2\/4 {
   width: 50%;
 }
-.w-24 {
-  width: 6rem;
+.w-3 {
+  width: 0.75rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -3453,12 +3591,12 @@ textarea.form-control.is-invalid {
   --tw-translate-y: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.-rotate-90 {
-  --tw-rotate: -90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .rotate-180 {
   --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-rotate-90 {
+  --tw-rotate: -90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-95 {
@@ -3498,11 +3636,11 @@ textarea.form-control.is-invalid {
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
-.grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
@@ -3577,9 +3715,6 @@ textarea.form-control.is-invalid {
 }
 .whitespace-nowrap {
   white-space: nowrap;
-}
-.break-all {
-  word-break: break-all;
 }
 .rounded-md {
   border-radius: 0.375rem;
@@ -3658,20 +3793,16 @@ textarea.form-control.is-invalid {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
-.border-white\/\[0\.08\] {
-  border-color: rgb(255 255 255 / 0.08);
-}
-.border-white {
+.border-gray-400 {
   --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 .border-gray-900 {
   --tw-border-opacity: 1;
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
 }
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+.border-white\/\[0\.08\] {
+  border-color: rgb(255 255 255 / 0.08);
 }
 .border-slate-200 {
   --tw-border-opacity: 1;
@@ -3681,20 +3812,16 @@ textarea.form-control.is-invalid {
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
 .border-slate-300 {
   --tw-border-opacity: 1;
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 .border-slate-200\/60 {
   border-color: rgb(226 232 240 / 0.6);
-}
-.border-green-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(20 83 45 / var(--tw-border-opacity));
-}
-.border-green-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(74 222 128 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -3748,14 +3875,6 @@ textarea.form-control.is-invalid {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
 .bg-blue-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
@@ -3776,13 +3895,13 @@ textarea.form-control.is-invalid {
   --tw-bg-opacity: 1;
   background-color: rgb(49 46 129 / var(--tw-bg-opacity));
 }
-.bg-green-900 {
+.bg-slate-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
-.bg-green-400 {
+.bg-slate-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -3808,6 +3927,9 @@ textarea.form-control.is-invalid {
 }
 .p-5 {
   padding: 1.25rem;
+}
+.p-10 {
+  padding: 2.5rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -3910,20 +4032,20 @@ textarea.form-control.is-invalid {
 .pl-5 {
   padding-left: 1.25rem;
 }
+.pl-16 {
+  padding-left: 4rem;
+}
 .pt-8 {
   padding-top: 2rem;
 }
-.pl-16 {
-  padding-left: 4rem;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 .pl-10 {
   padding-left: 2.5rem;
 }
 .pb-10 {
   padding-bottom: 2.5rem;
-}
-.pr-10 {
-  padding-right: 2.5rem;
 }
 .text-left {
   text-align: left;
@@ -4078,10 +4200,6 @@ textarea.form-control.is-invalid {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
-.text-slate-500 {
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
-}
 .text-slate-600 {
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity));
@@ -4094,16 +4212,12 @@ textarea.form-control.is-invalid {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
+}
 .text-white\/70 {
   color: rgb(255 255 255 / 0.7);
-}
-.text-green-800 {
-  --tw-text-opacity: 1;
-  color: rgb(22 101 52 / var(--tw-text-opacity));
-}
-.text-green-900 {
-  --tw-text-opacity: 1;
-  color: rgb(20 83 45 / var(--tw-text-opacity));
 }
 .text-opacity-70 {
   --tw-text-opacity: 0.7;
@@ -4263,14 +4377,6 @@ textarea.form-control.is-invalid {
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
-.hover\:border-green-400:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(74 222 128 / var(--tw-border-opacity));
-}
-.hover\:border-green-800:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(22 101 52 / var(--tw-border-opacity));
-}
 .hover\:bg-indigo-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
@@ -4302,14 +4408,6 @@ textarea.form-control.is-invalid {
 .hover\:bg-white\/5:hover {
   background-color: rgb(255 255 255 / 0.05);
 }
-.hover\:bg-green-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-.hover\:bg-green-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
-}
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -4329,10 +4427,6 @@ textarea.form-control.is-invalid {
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.hover\:text-green-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(74 222 128 / var(--tw-text-opacity));
 }
 .hover\:opacity-100:hover {
   opacity: 1;
@@ -4476,11 +4570,6 @@ textarea.form-control.is-invalid {
     background-color: rgb(31 41 55 / var(--tw-bg-opacity));
   }
 
-  .dark\:text-slate-500 {
-    --tw-text-opacity: 1;
-    color: rgb(100 116 139 / var(--tw-text-opacity));
-  }
-
   .dark\:text-slate-400 {
     --tw-text-opacity: 1;
     color: rgb(148 163 184 / var(--tw-text-opacity));
@@ -4491,9 +4580,9 @@ textarea.form-control.is-invalid {
     color: rgb(226 232 240 / var(--tw-text-opacity));
   }
 
-  .dark\:text-slate-300 {
+  .dark\:text-slate-500 {
     --tw-text-opacity: 1;
-    color: rgb(203 213 225 / var(--tw-text-opacity));
+    color: rgb(100 116 139 / var(--tw-text-opacity));
   }
 
   .dark\:text-gray-500 {
@@ -4509,6 +4598,11 @@ textarea.form-control.is-invalid {
   .dark\:text-gray-400 {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-slate-300 {
+    --tw-text-opacity: 1;
+    color: rgb(203 213 225 / var(--tw-text-opacity));
   }
 }
 @media (min-width: 640px) {
@@ -4564,8 +4658,16 @@ textarea.form-control.is-invalid {
     margin-right: 1.5rem;
   }
 
+  .sm\:ml-0 {
+    margin-left: 0px;
+  }
+
   .sm\:ml-auto {
     margin-left: auto;
+  }
+
+  .sm\:mr-auto {
+    margin-right: auto;
   }
 
   .sm\:mt-5 {
@@ -4574,14 +4676,6 @@ textarea.form-control.is-invalid {
 
   .sm\:mt-2 {
     margin-top: 0.5rem;
-  }
-
-  .sm\:mr-auto {
-    margin-right: auto;
-  }
-
-  .sm\:ml-0 {
-    margin-left: 0px;
   }
 
   .sm\:block {
@@ -4616,16 +4710,16 @@ textarea.form-control.is-invalid {
     width: 75%;
   }
 
+  .sm\:w-auto {
+    width: auto;
+  }
+
   .sm\:w-56 {
     width: 14rem;
   }
 
   .sm\:w-40 {
     width: 10rem;
-  }
-
-  .sm\:w-auto {
-    width: auto;
   }
 
   .sm\:max-w-md {
@@ -4952,12 +5046,12 @@ textarea.form-control.is-invalid {
     margin-top: 0px;
   }
 
-  .xl\:ml-auto {
-    margin-left: auto;
-  }
-
   .xl\:mt-24 {
     margin-top: 6rem;
+  }
+
+  .xl\:ml-auto {
+    margin-left: auto;
   }
 
   .xl\:block {
