--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1572,6 +1572,15 @@ textarea.form-control.is-invalid {
 .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
 }
+.nav-tabs .nav-link {
+  color: #4b5563;
+}
+.nav-tabs .nav-link:hover {
+  isolation: isolate;
+}
+.nav-tabs .nav-link:focus {
+  isolation: isolate;
+}
 .nav-tabs .nav-link.disabled {
   color: #9ca3af;
   background-color: transparent;
@@ -1590,6 +1599,11 @@ textarea.form-control.is-invalid {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.nav-pills .nav-link {
+  background: #f3f4f6;
+  color: #4b5563;
+  box-shadow: none;
+}
 .nav-pills .nav-link.active {
   background: #2563eb;
   color: #fff;
@@ -1604,16 +1618,30 @@ textarea.form-control.is-invalid {
   color: #9ca3af;
   background-color: rgba(243, 244, 246, 0.5);
 }
+.nav-pills.menu-sidebar .nav-link {
+  background-color: transparent;
+  box-shadow: none;
+  padding: 0 5px;
+  border-radius: 0;
+}
 .nav-pills.menu-sidebar .nav-link.active {
   color: #1266f1;
   font-weight: 600;
   border-left: 0.125rem solid #1266f1;
+}
+.nav-justified > .nav-link {
+  -ms-flex-basis: 0;
+  flex-basis: 0;
 }
 .tab-content > .active {
   display: block;
 }
 .navbar-expand .navbar-nav .dropdown-menu {
   position: absolute;
+}
+.navbar-expand .navbar-nav .nav-link {
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
 }
 .navbar-light .navbar-nav .nav-link.disabled {
   color: rgba(0, 0, 0, 0.3);
@@ -1644,6 +1672,9 @@ textarea.form-control.is-invalid {
 .modal {
   z-index: 1055;
 }
+.\!modal {
+  z-index: 1055 !important;
+}
 .modal-dialog {
   margin: 0.5rem;
 }
@@ -1651,11 +1682,21 @@ textarea.form-control.is-invalid {
   transition: transform 0.3s ease-out;
   transform: translate(0, -50px);
 }
+.\!modal.\!fade .\!modal-dialog {
+  transition: transform 0.3s ease-out !important;
+  transform: translate(0, -50px) !important;
+}
 .modal.show .modal-dialog {
   transform: none;
 }
+.\!modal.\!show .\!modal-dialog {
+  transform: none !important;
+}
 .modal.modal-static .modal-dialog {
   transform: scale(1.02);
+}
+.\!modal.\!modal-static .\!modal-dialog {
+  transform: scale(1.02) !important;
 }
 .modal-dialog-scrollable .modal-content {
   max-height: 100%;
@@ -1931,6 +1972,92 @@ textarea.form-control.is-invalid {
   .spinner-grow {
     -webkit-animation-duration: 1.5s;
     animation-duration: 1.5s;
+  }
+
+  .\!form-control::-webkit-file-upload-button {
+    -webkit-transition: none !important;
+    transition: none !important;
+  }
+
+  .\!form-control::file-selector-button {
+    transition: none !important;
+  }
+
+  .\!form-control::-webkit-file-upload-button {
+    -webkit-transition: none !important;
+    transition: none !important;
+  }
+
+  .\!form-switch .\!form-check-input {
+    transition: none !important;
+  }
+
+  .\!form-range::-webkit-slider-thumb {
+    -webkit-transition: none !important;
+    transition: none !important;
+  }
+
+  .\!form-range::-moz-range-thumb {
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+
+  .\!form-floating > label {
+    transition: none !important;
+  }
+
+  .\!fade {
+    transition: none !important;
+  }
+
+  .\!collapsing {
+    transition: none !important;
+  }
+
+  .\!collapsing.\!collapse-horizontal {
+    transition: none !important;
+  }
+
+  .\!accordion-button::after {
+    transition: none !important;
+  }
+
+  .\!modal.\!fade .\!modal-dialog {
+    transition: none !important;
+  }
+
+  .\!carousel-item {
+    transition: none !important;
+  }
+
+  .\!carousel-fade .\!active.\!carousel-item-start {
+    transition: none !important;
+  }
+
+  .\!carousel-fade .\!active.\!carousel-item-end {
+    transition: none !important;
+  }
+
+  .\!carousel-control-prev {
+    transition: none !important;
+  }
+
+  .\!carousel-control-next {
+    transition: none !important;
+  }
+
+  .\!carousel-indicators [data-bs-target] {
+    transition: none !important;
+  }
+
+  .\!spinner-border {
+    -webkit-animation-duration: 1.5s !important;
+    animation-duration: 1.5s !important;
+  }
+
+  .\!spinner-grow {
+    -webkit-animation-duration: 1.5s !important;
+    animation-duration: 1.5s !important;
   }
 }
 @media (min-width: 576px) {
@@ -3190,6 +3317,9 @@ textarea.form-control.is-invalid {
     transform: scale(1);
   }
 }
+.invisible {
+  visibility: hidden;
+}
 .fixed {
   position: fixed;
 }
@@ -3236,6 +3366,9 @@ textarea.form-control.is-invalid {
 .z-10 {
   z-index: 10;
 }
+.z-30 {
+  z-index: 30;
+}
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
@@ -3249,10 +3382,6 @@ textarea.form-control.is-invalid {
   margin-left: auto;
   margin-right: auto;
 }
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
@@ -3260,6 +3389,10 @@ textarea.form-control.is-invalid {
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
+}
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 .my-2 {
   margin-top: 0.5rem;
@@ -3349,6 +3482,12 @@ textarea.form-control.is-invalid {
 .mb-5 {
   margin-bottom: 1.25rem;
 }
+.-mt-16 {
+  margin-top: -4rem;
+}
+.mr-auto {
+  margin-right: auto;
+}
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -3360,12 +3499,6 @@ textarea.form-control.is-invalid {
 }
 .-mt-px {
   margin-top: -1px;
-}
-.-mt-16 {
-  margin-top: -4rem;
-}
-.mr-auto {
-  margin-right: auto;
 }
 .mt-0\.5 {
   margin-top: 0.125rem;
@@ -3379,8 +3512,8 @@ textarea.form-control.is-invalid {
 .mr-1 {
   margin-right: 0.25rem;
 }
-.mb-2 {
-  margin-bottom: 0.5rem;
+.mb-8 {
+  margin-bottom: 2rem;
 }
 .mr-5 {
   margin-right: 1.25rem;
@@ -3408,6 +3541,12 @@ textarea.form-control.is-invalid {
 }
 .-mb-10 {
   margin-bottom: -2.5rem;
+}
+.mt-20 {
+  margin-top: 5rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 .block {
   display: block;
@@ -3457,11 +3596,11 @@ textarea.form-control.is-invalid {
 .h-20 {
   height: 5rem;
 }
-.h-60 {
-  height: 15rem;
-}
 .h-screen {
   height: 100vh;
+}
+.h-60 {
+  height: 15rem;
 }
 .h-24 {
   height: 6rem;
@@ -3526,11 +3665,11 @@ textarea.form-control.is-invalid {
 .w-20 {
   width: 5rem;
 }
-.w-40 {
-  width: 10rem;
-}
 .w-1\/2 {
   width: 50%;
+}
+.w-40 {
+  width: 10rem;
 }
 .w-56 {
   width: 14rem;
@@ -3564,6 +3703,9 @@ textarea.form-control.is-invalid {
 }
 .max-w-6xl {
   max-width: 72rem;
+}
+.max-w-lg {
+  max-width: 32rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -3903,8 +4045,15 @@ textarea.form-control.is-invalid {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
+}
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
 }
 .bg-cover {
   background-size: cover;
@@ -4313,6 +4462,12 @@ textarea.form-control.is-invalid {
 .duration-300 {
   transition-duration: 300ms;
 }
+.duration-500 {
+  transition-duration: 500ms;
+}
+.duration-1000 {
+  transition-duration: 1000ms;
+}
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -4575,14 +4730,14 @@ textarea.form-control.is-invalid {
     color: rgb(148 163 184 / var(--tw-text-opacity));
   }
 
-  .dark\:text-slate-200 {
-    --tw-text-opacity: 1;
-    color: rgb(226 232 240 / var(--tw-text-opacity));
-  }
-
   .dark\:text-slate-500 {
     --tw-text-opacity: 1;
     color: rgb(100 116 139 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-slate-200 {
+    --tw-text-opacity: 1;
+    color: rgb(226 232 240 / var(--tw-text-opacity));
   }
 
   .dark\:text-gray-500 {
