--- a/public/css/app.css
+++ b/public/css/app.css
@@ -965,8 +965,8 @@ select {
 .prose > :where(:last-child):not(:where([class~="not-prose"] *)) {
   margin-bottom: 0;
 }
-.invisible {
-  visibility: hidden;
+.visible {
+  visibility: visible;
 }
 .fixed {
   position: fixed;
@@ -1022,9 +1022,6 @@ select {
 }
 .col-span-3 {
   grid-column: span 3 / span 3;
-}
-.col-span-2 {
-  grid-column: span 2 / span 2;
 }
 .mx-auto {
   margin-left: auto;
@@ -1148,6 +1145,12 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
+.mr-5 {
+  margin-right: 1.25rem;
+}
+.-ml-1 {
+  margin-left: -0.25rem;
+}
 .mr-1 {
   margin-right: 0.25rem;
 }
@@ -1160,17 +1163,14 @@ select {
 .mr-52 {
   margin-right: 13rem;
 }
-.-mt-4 {
-  margin-top: -1rem;
-}
 .mt-20 {
   margin-top: 5rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
 }
-.mr-5 {
-  margin-right: 1.25rem;
+.-mt-4 {
+  margin-top: -1rem;
 }
 .ml-auto {
   margin-left: auto;
@@ -1187,20 +1187,11 @@ select {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
-.-ml-1 {
-  margin-left: -0.25rem;
-}
 .-ml-5 {
   margin-left: -1.25rem;
 }
 .-mb-10 {
   margin-bottom: -2.5rem;
-}
-.-ml-4 {
-  margin-left: -1rem;
-}
-.-ml-2 {
-  margin-left: -0.5rem;
 }
 .block {
   display: block;
@@ -1255,6 +1246,9 @@ select {
 }
 .h-60 {
   height: 15rem;
+}
+.h-48 {
+  height: 12rem;
 }
 .h-24 {
   height: 6rem;
@@ -1325,11 +1319,11 @@ select {
 .w-40 {
   width: 10rem;
 }
-.w-24 {
-  width: 6rem;
-}
 .w-56 {
   width: 14rem;
+}
+.w-24 {
+  width: 6rem;
 }
 .w-px {
   width: 1px;
@@ -1342,18 +1336,6 @@ select {
 }
 .w-3 {
   width: 0.75rem;
-}
-.w-96 {
-  width: 24rem;
-}
-.w-80 {
-  width: 20rem;
-}
-.w-64 {
-  width: 16rem;
-}
-.w-72 {
-  width: 18rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1378,9 +1360,6 @@ select {
 }
 .flex-none {
   flex: none;
-}
-.flex-auto {
-  flex: 1 1 auto;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -1453,9 +1432,6 @@ select {
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
@@ -1495,9 +1471,6 @@ select {
 .gap-1 {
   gap: 0.25rem;
 }
-.gap-2 {
-  gap: 0.5rem;
-}
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1513,17 +1486,11 @@ select {
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
-.justify-self-start {
-  justify-self: start;
-}
 .overflow-auto {
   overflow: auto;
 }
 .overflow-hidden {
   overflow: hidden;
-}
-.overflow-x-auto {
-  overflow-x: auto;
 }
 .overflow-y-auto {
   overflow-y: auto;
@@ -1616,6 +1583,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
@@ -1634,10 +1605,6 @@ select {
 .border-slate-400 {
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
-}
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .border-slate-300 {
   --tw-border-opacity: 1;
@@ -1748,17 +1715,14 @@ select {
 .p-6 {
   padding: 1.5rem;
 }
-.p-5 {
-  padding: 1.25rem;
+.p-8 {
+  padding: 2rem;
 }
 .p-10 {
   padding: 2.5rem;
 }
-.p-20 {
-  padding: 5rem;
-}
-.p-8 {
-  padding: 2rem;
+.p-5 {
+  padding: 1.25rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1924,6 +1888,10 @@ select {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
 }
 .text-3xl {
   font-size: 1.875rem;
@@ -2151,6 +2119,7 @@ select {
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+/* @import './midone.css'; */
 .before\:absolute::before {
   content: var(--tw-content);
   position: absolute;
@@ -2414,6 +2383,11 @@ select {
     color: rgb(226 232 240 / var(--tw-text-opacity));
   }
 
+  .dark\:text-slate-300 {
+    --tw-text-opacity: 1;
+    color: rgb(203 213 225 / var(--tw-text-opacity));
+  }
+
   .dark\:text-gray-500 {
     --tw-text-opacity: 1;
     color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -2428,11 +2402,6 @@ select {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
   }
-
-  .dark\:text-slate-300 {
-    --tw-text-opacity: 1;
-    color: rgb(203 213 225 / var(--tw-text-opacity));
-  }
 }
 @media (min-width: 640px) {
 
@@ -2440,12 +2409,12 @@ select {
     grid-column: span 4 / span 4;
   }
 
-  .sm\:col-span-6 {
-    grid-column: span 6 / span 6;
-  }
-
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
+  }
+
+  .sm\:col-span-6 {
+    grid-column: span 6 / span 6;
   }
 
   .sm\:mx-0 {
@@ -2487,16 +2456,20 @@ select {
     margin-left: 1.5rem;
   }
 
+  .sm\:ml-auto {
+    margin-left: auto;
+  }
+
+  .sm\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
   .sm\:mr-6 {
     margin-right: 1.5rem;
   }
 
   .sm\:ml-0 {
     margin-left: 0px;
-  }
-
-  .sm\:ml-auto {
-    margin-left: auto;
   }
 
   .sm\:mr-auto {
@@ -2507,20 +2480,12 @@ select {
     margin-top: 1.25rem;
   }
 
-  .sm\:mt-2 {
-    margin-top: 0.5rem;
-  }
-
   .sm\:block {
     display: block;
   }
 
   .sm\:flex {
     display: flex;
-  }
-
-  .sm\:grid {
-    display: grid;
   }
 
   .sm\:hidden {
@@ -2598,14 +2563,6 @@ select {
     --tw-scale-x: 1;
     --tw-scale-y: 1;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .sm\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:flex-row {
@@ -2712,10 +2669,6 @@ select {
 }
 @media (min-width: 768px) {
 
-  .invisible {
-    visibility: hidden;
-  }
-
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -2748,28 +2701,12 @@ select {
     display: none;
   }
 
-  .hidden {
-    display: none;
-  }
-
-  .md\:w-40 {
-    width: 10rem;
-  }
-
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
   .md\:gap-6 {
@@ -2786,10 +2723,6 @@ select {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
-  .md\:whitespace-nowrap {
-    white-space: nowrap;
   }
 
   .md\:border-t-0 {
@@ -2814,6 +2747,14 @@ select {
     grid-column: span 3 / span 3;
   }
 
+  .lg\:mr-20 {
+    margin-right: 5rem;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
   .lg\:mr-1 {
     margin-right: 0.25rem;
   }
@@ -2826,8 +2767,8 @@ select {
     margin-right: auto;
   }
 
-  .lg\:mt-0 {
-    margin-top: 0px;
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:h-12 {
@@ -2840,10 +2781,6 @@ select {
 
   .lg\:w-12 {
     width: 3rem;
-  }
-
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -2861,6 +2798,11 @@ select {
 
   .lg\:text-left {
     text-align: left;
+  }
+
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 @media (min-width: 1280px) {
