--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1030,6 +1030,10 @@ input#checkboxLabelFive:checked ~ .box{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
 }
+.-mx-3{
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
+}
 .-mx-4{
   margin-left: -1rem;
   margin-right: -1rem;
@@ -1220,6 +1224,9 @@ input#checkboxLabelFive:checked ~ .box{
 .-mb-10{
   margin-bottom: -2.5rem;
 }
+.mr-8{
+  margin-right: 2rem;
+}
 .block{
   display: block;
 }
@@ -1283,11 +1290,11 @@ input#checkboxLabelFive:checked ~ .box{
 .h-24{
   height: 6rem;
 }
-.h-1{
-  height: 0.25rem;
-}
 .h-full{
   height: 100%;
+}
+.h-1{
+  height: 0.25rem;
 }
 .h-32{
   height: 8rem;
@@ -1297,6 +1304,9 @@ input#checkboxLabelFive:checked ~ .box{
 }
 .h-3{
   height: 0.75rem;
+}
+.h-56{
+  height: 14rem;
 }
 .max-h-56{
   max-height: 14rem;
@@ -1361,6 +1371,9 @@ input#checkboxLabelFive:checked ~ .box{
 .w-24{
   width: 6rem;
 }
+.w-\[90px\]{
+  width: 90px;
+}
 .w-1\/6{
   width: 16.666667%;
 }
@@ -1406,6 +1419,9 @@ input#checkboxLabelFive:checked ~ .box{
 .max-w-6xl{
   max-width: 72rem;
 }
+.max-w-\[570px\]{
+  max-width: 570px;
+}
 .max-w-full{
   max-width: 100%;
 }
@@ -1414,6 +1430,18 @@ input#checkboxLabelFive:checked ~ .box{
 }
 .max-w-\[160px\]{
   max-width: 160px;
+}
+.max-w-\[1000px\]{
+  max-width: 1000px;
+}
+.max-w-\[800px\]{
+  max-width: 800px;
+}
+.max-w-\[600px\]{
+  max-width: 600px;
+}
+.max-w-\[700px\]{
+  max-width: 700px;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -1621,6 +1649,9 @@ input#checkboxLabelFive:checked ~ .box{
 .rounded-xl{
   border-radius: 0.75rem;
 }
+.rounded-\[20px\]{
+  border-radius: 20px;
+}
 .rounded-l-md{
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -1716,6 +1747,14 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
 }
+.border-\[\#E9EDF9\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(233 237 249 / var(--tw-border-opacity));
+}
+.border-primary{
+  --tw-border-opacity: 1;
+  border-color: rgb(48 86 211 / var(--tw-border-opacity));
+}
 .border-\[\#E8E8E8\]{
   --tw-border-opacity: 1;
   border-color: rgb(232 232 232 / var(--tw-border-opacity));
@@ -1794,13 +1833,17 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
-.bg-green-600{
+.bg-black{
   --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+  background-color: rgb(33 43 54 / var(--tw-bg-opacity));
 }
 .bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(48 86 211 / var(--tw-bg-opacity));
+}
+.bg-green-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 .bg-\[\#F3F6FF\]{
   --tw-bg-opacity: 1;
@@ -1821,10 +1864,6 @@ input#checkboxLabelFive:checked ~ .box{
 .bg-warning{
   --tw-bg-opacity: 1;
   background-color: rgb(249 193 7 / var(--tw-bg-opacity));
-}
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 43 54 / var(--tw-bg-opacity));
 }
 .bg-blue-800{
   --tw-bg-opacity: 1;
@@ -1862,6 +1901,9 @@ input#checkboxLabelFive:checked ~ .box{
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
+}
+.bg-opacity-90{
+  --tw-bg-opacity: 0.9;
 }
 .bg-opacity-\[15\%\]{
   --tw-bg-opacity: 15%;
@@ -1905,6 +1947,9 @@ input#checkboxLabelFive:checked ~ .box{
 }
 .p-10{
   padding: 2.5rem;
+}
+.p-3{
+  padding: 0.75rem;
 }
 .p-1{
   padding: 0.25rem;
@@ -1975,6 +2020,10 @@ input#checkboxLabelFive:checked ~ .box{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -2038,6 +2087,9 @@ input#checkboxLabelFive:checked ~ .box{
 }
 .pr-3{
   padding-right: 0.75rem;
+}
+.pb-2{
+  padding-bottom: 0.5rem;
 }
 .pt-20{
   padding-top: 5rem;
@@ -2134,6 +2186,9 @@ input#checkboxLabelFive:checked ~ .box{
 }
 .leading-4{
   line-height: 1rem;
+}
+.leading-relaxed{
+  line-height: 1.625;
 }
 .leading-loose{
   line-height: 2;
@@ -2235,6 +2290,10 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-text-opacity: 1;
   color: rgb(9 14 52 / var(--tw-text-opacity));
 }
+.text-body-color{
+  --tw-text-opacity: 1;
+  color: rgb(99 115 129 / var(--tw-text-opacity));
+}
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(48 86 211 / var(--tw-text-opacity));
@@ -2250,10 +2309,6 @@ input#checkboxLabelFive:checked ~ .box{
 .text-blue-600{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-.text-body-color{
-  --tw-text-opacity: 1;
-  color: rgb(99 115 129 / var(--tw-text-opacity));
 }
 .text-warning{
   --tw-text-opacity: 1;
@@ -2465,6 +2520,10 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
+.hover\:border-red-600:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
 .hover\:border-slate-200:hover{
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
@@ -2535,13 +2594,13 @@ input#checkboxLabelFive:checked ~ .box{
   --tw-text-opacity: 1;
   color: rgb(33 43 54 / var(--tw-text-opacity));
 }
-.hover\:text-primary:hover{
-  --tw-text-opacity: 1;
-  color: rgb(48 86 211 / var(--tw-text-opacity));
-}
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.hover\:text-primary:hover{
+  --tw-text-opacity: 1;
+  color: rgb(48 86 211 / var(--tw-text-opacity));
 }
 .hover\:underline:hover{
   -webkit-text-decoration-line: underline;
@@ -2998,6 +3057,10 @@ input#checkboxLabelFive:checked ~ .box{
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+  .sm\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
   .sm\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -3055,6 +3118,30 @@ input#checkboxLabelFive:checked ~ .box{
   }
   .md\:p-9{
     padding: 2.25rem;
+  }
+  .md\:py-\[60px\]{
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .md\:px-\[70px\]{
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  .md\:py-\[20px\]{
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .md\:py-\[4px\]{
+    padding-top: 4px;
+    padding-bottom: 4px;
+  }
+  .md\:py-\[10px\]{
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .md\:py-\[14px\]{
+    padding-top: 14px;
+    padding-bottom: 14px;
   }
 }
 @media (min-width: 960px){
